[package]
name = "rlboot"
description = "x86 bootloader targeted for floppy discs"
version = "0.1.0"
edition = "2021"
authors = [ "Peter Farley <far.peter1@gmail.com>" ]

[dependencies]

[profile.dev]
panic = "abort" # Disable stack unwinding

[profile.release]
panic = "abort" # Disable stack unwinding

[lib]
path = "src/main.rs"
crate-type = ["staticlib"]

