[package]
name = "rlboot"
description = "x86 bootloader targeted for floppy discs"
version = "0.1.0"
edition = "2021"
authors = [ "Peter Farley <far.peter1@gmail.com>" ]
include = [ "src/**/*", "Cargo.toml" ]

[profile.dev]
panic = "abort" # Disable stack unwinding

[profile.release]
panic = "abort" # Disable stack unwinding

[lib]
path = "src/main.rs"
crate-type = ["staticlib"]

[features]
io = []

[dependencies]
linked_list_allocator = "0.10.5"
