[package]
name = "rlboot"
description = "x86 bootloader targeted for floppy discs"
version = "0.1.0"
edition = "2021"
authors = [ "Peter Farley <far.peter1@gmail.com>" ]
license = "MIT"
include = [ "src/**/*", "Cargo.toml" ]

[profile.dev]
panic = "abort" # Disable stack unwinding
opt-level = "z"
# Using fat LTO here causes undefined references to panic
lto = "thin"
codegen-units = 1

[profile.release]
panic = "abort" # Disable stack unwinding
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = true # Include debug symbols

[lib]
path = "src/main.rs"
crate-type = ["staticlib"]

[features]
verbose_panic = []

[dependencies]
linked_list_allocator = "0.10.5"
